<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include
            android:id="@+id/include_toolbar"
            layout="@layout/view_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
            android:id="@+id/new_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/login_ok_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/scan_btn"/>


    <RelativeLayout
            android:id="@+id/scan_btn"
            style="@style/ButtonYellowTheme"
            android:layout_width="@dimen/big_btn_width"
            android:layout_height="@dimen/big_btn_height"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/sport_betting_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/frame_black"
                android:textAllCaps="true"
                android:text="@string/login_ok_scan_btn"
                android:textColor="@color/white"
                android:textSize="16sp"/>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/sport_betting_btn"
            style="@style/ButtonGreenTheme"
            android:layout_width="@dimen/big_btn_width"
            android:layout_height="@dimen/big_btn_height"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/login_ok_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/frame_black"
                android:textAllCaps="true"
                android:text="@string/login_ok_sport_btn"
                android:textColor="@color/white"
                android:textSize="16sp"/>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/jackpot_btn"
            style="@style/ButtonGreenTheme"
            android:layout_width="@dimen/big_btn_width"
            android:layout_height="@dimen/big_btn_height"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/login_ok_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/frame_black"
                android:textAllCaps="true"
                android:text="@string/login_ok_jackpot_btn"
                android:textColor="@color/white"
                android:textSize="16sp"/>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/deposits_btn"
            style="@style/ButtonBlueTheme.Theme"
            android:layout_width="@dimen/big_btn_width"
            android:layout_height="@dimen/big_btn_height"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/jackpot_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/frame_black"
                android:textAllCaps="true"
                android:text="@string/login_ok_deposits_btn"
                android:textColor="@color/white"
                android:textSize="16sp"/>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/logout_btn"
            style="@style/ButtonRedTheme"
            android:layout_width="@dimen/small_btn_width"
            android:layout_height="@dimen/small_btn_height"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/frame_black"
                android:textAllCaps="true"
                android:text="@string/logout_btn"
                android:textColor="@color/white"
                android:textSize="16sp"/>

    </RelativeLayout>


    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/login_ok_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55"/>

</androidx.constraintlayout.widget.ConstraintLayout>