<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageView
            android:id="@+id/camera_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/new_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/login_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="35dp"
            app:layout_constraintBottom_toTopOf="@+id/frame_username"/>

    <RelativeLayout
            android:id="@+id/frame_username"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            style="@style/EditTextTheme"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/login_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:hint="@string/login_username_hint"
                android:inputType="text"
                tools:ignore="Autofill"/>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/frame_password"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            style="@style/EditTextTheme"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/login_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:hint="@string/login_password_hint"
                tools:ignore="Autofill"/>

    </RelativeLayout>


    <RelativeLayout
            android:id="@+id/login_btn"
            style="@style/ButtonGreenTheme"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/frame_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/frame_black"
                android:textAllCaps="true"
                android:text="@string/login_btn"
                android:textColor="@color/white"
                android:textSize="16sp"/>

    </RelativeLayout>


    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/login_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55"/>

</androidx.constraintlayout.widget.ConstraintLayout>